# cqr-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  checksum-Elixir.Cqr.Grafeo.Native.exs  ld  mix.exs  start.sh
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: adapter_contribution.md  bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
bench/: discover_hybrid_near_bench.exs  resolve_batch_bench.exs
config/: config.exs  test.exs
docs/: BUG-LOG.md.rtf  CQR-TECHNICAL-SPEC.md  MCP-SERVER-PLAN.md  PROJECT_KNOWLEDGE.md  UNICA-MVP2-Developer-Tools-Spec.md  VALIDATION-SUITE.md  architecture.md  blog-post-draft.md  cqr-primer.md  cqr-protocol-specification.md  demo-script.md  mcp-integration.md
lib/: cqr_mcp.ex
lib/adapter/: behaviour.ex  grafeo.ex
lib/cqr/: anchor.ex  assert.ex  awareness.ex  certify.ex  compare.ex  cost.ex  discover.ex  embedding.ex  engine.ex  error.ex  hypothesize.ex  parser.ex  quality.ex  refresh.ex  resolve.ex  resolve_batch.ex  result.ex  scope.ex  signal.ex  trace.ex  types.ex  update.ex
lib/cqr_mcp/: application.ex  handler.ex  resources.ex  server.ex  tools.ex
lib/grafeo/: codec.ex  gql.ex  native.ex  server.ex
lib/repo/: backfill.ex  install_seed.ex  scope_tree.ex  seed.ex  semantic.ex  snapshot.ex
migration/grafeo-0540-storage-format/: grafeo-compact-dump.py
native/cqr_grafeo/: Cargo.toml
native/cqr_grafeo/src/: lib.rs
priv/install/: agent-default-coordination.md  agent-default.md  assertion-protocol.md  (+3 more)
specs/: Assert primitive specification.md
test/: cqr_mcp_test.exs
(+80 files in other folders)
