[package]
name = "cqr_grafeo"
version = "0.1.0"
edition = "2021"

[lib]
name = "cqr_grafeo"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.37"
grafeo = { version = "=0.5.40", default-features = true }
grafeo-common = "=0.5.40"
grafeo-engine = "=0.5.40"

[features]
default = ["nif_version_2_16"]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
nif_version_2_17 = ["rustler/nif_version_2_17"]

[patch.crates-io]
grafeo-storage = { path = "../../vendor/grafeo-storage-0.5.40" }
